--- a/report/reporte_libro_conciliacion_bancaria_views.xml
+++ b/report/reporte_libro_conciliacion_bancaria_views.xml
@@ -93,8 +93,8 @@
                                                 <td><span t-esc="m['documento']"/></td>
                                                 <td><span t-esc="m['beneficiario']"/></td>
                                                 <td><span t-esc="m['concepto']"/></td>
-                                                <td class="text-right"><span t-esc="m['credito']"/></td>
-                                                <td class="text-right"><span t-esc="m['debito']"/></td>
+                                                <td class="text-right"><span t-esc="m['credito']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                                <td class="text-right"><span t-esc="m['debito']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                             </tr>
                                         </tbody>
                                 </table>
