--- a/views/account_move_views.xml
+++ b/views/account_move_views.xml
@@ -9,6 +9,7 @@
             <field name="arch" type="xml">
                 <field name="fiscal_position_id" position="after">
                     <field name="liquidacion_id"/>
+                    <field name="tipo_factura"/>
                 </field>
             </field>
         </record>
