--- a/report/reporte_libro_compras_views.xml
+++ b/report/reporte_libro_compras_views.xml
@@ -37,7 +37,9 @@
                                         <th>NIT</th>
                                         <th>Proveedor</th>
                                         <th class="text-right">Compra</th>
+                                        <th class="text-right">Compras exentos</th>
                                         <th class="text-right">Servicios</th>
+                                        <th class="text-right">Servicios exentos</th>
                                         <th class="text-right">Importacion</th>
                                         <th class="text-right">IVA</th>
                                         <th class="text-right">Total</th>
@@ -50,7 +52,11 @@
                                         <td><span t-esc="linea['nit']"/></td>
                                         <td><span t-esc="linea['proveedor']"/></td>
                                         <td class="text-right"><span t-esc="linea['compra']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                        <td class="text-right"><span t-esc="linea['compra_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+
                                         <td class="text-right"><span t-esc="linea['servicio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                        <td class="text-right"><span t-esc="linea['servicio_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+
                                         <td class="text-right"><span t-esc="linea['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
@@ -62,7 +68,11 @@
                                         <td></td>
                                         <td></td>
                                         <td class="text-right"><strong><span t-esc="t['compra']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                        <td class="text-right"><strong><span t-esc="t['compra_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+
                                         <td class="text-right"><strong><span t-esc="t['servicio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                        <td class="text-right"><strong><span t-esc="t['servicio_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+
                                         <td class="text-right"><strong><span t-esc="t['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
