--- a/report/reporte_libro_compras_views.xml
+++ b/report/reporte_libro_compras_views.xml
@@ -41,6 +41,7 @@
                                         <th class="text-right">Servicios</th>
                                         <th class="text-right">Servicios exentos</th>
                                         <th class="text-right">Importacion</th>
+                                        <th class="text-right">Pequeño contribuyente</th>
                                         <th class="text-right">IVA</th>
                                         <th class="text-right">Total</th>
                                     </tr>
@@ -58,6 +59,8 @@
                                         <td class="text-right"><span t-esc="linea['servicio_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
 
                                         <td class="text-right"><span t-esc="linea['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                        <td class="text-right"><span t-esc="linea['pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+
                                         <td class="text-right"><span t-esc="linea['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                     </tr>
@@ -74,6 +77,8 @@
                                         <td class="text-right"><strong><span t-esc="t['servicio_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
 
                                         <td class="text-right"><strong><span t-esc="t['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                        <td class="text-right"><strong><span t-esc="t['pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+
                                         <td class="text-right"><strong><span t-esc="t['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                     </tr>
