--- a/wizard/libro_compras_wizard_views.xml
+++ b/wizard/libro_compras_wizard_views.xml
@@ -18,6 +18,7 @@
                     <footer>
                         <button name="print_report" type="object" string="Generar" class="oe_highlight"/>
                         <button name="print_report_excel" string="Reporte excel" type="object" class="oe_highlight"/>
+                        <button name="test" string="test" type="object" class="oe_highlight"/>
                         or
                         <button special="cancel" string="Cancel"/>
                     </footer>
