--- a/wizard/libro_ventas_wizard_views.xml
+++ b/wizard/libro_ventas_wizard_views.xml
@@ -11,8 +11,13 @@
                         <field name="fecha_inicio"/>
                         <field name="fecha_fin"/>
                     </group>
+                    <group>
+                        <field name="name" invisible="1"/>
+                        <field name="archivo" readonly="1" filename="name"/>
+                    </group>
                     <footer>
                         <button name="print_report" type="object" string="Generar" class="oe_highlight"/>
+                        <button name="print_report_excel" string="Reporte excel" type="object" class="oe_highlight"/>
                         or
                         <button special="cancel" string="Cancel"/>
                     </footer>
