--- a/wizard/libro_bancos_wizard_views.xml
+++ b/wizard/libro_bancos_wizard_views.xml
@@ -23,8 +23,8 @@
 
         <act_window id="launch_account_gt_libro_bancos"
                     name="Libro de bancos"
-                    binding_model="account.account"
                     res_model="account_gt.libro_bancos.wizard"
+                    src_model="account.account"
                     view_mode="form"
                     target="new"/>
 
