--- a/wizard/libro_ventas_wizard_views.xml
+++ b/wizard/libro_ventas_wizard_views.xml
@@ -27,8 +27,8 @@
 
         <act_window id="launch_account_gt_libro_ventas"
                     name="Libro de ventas"
-                    binding_model="account.account"
                     res_model="account_gt.libro_ventas.wizard"
+                    src_model="account.account"
                     view_mode="form"
                     target="new"/>
 
