--- a/wizard/libro_ventas_wizard_views.xml
+++ b/wizard/libro_ventas_wizard_views.xml
@@ -10,6 +10,7 @@
                     <group>
                         <field name="fecha_inicio"/>
                         <field name="fecha_fin"/>
+                        <field name="diarios_ids" widget="many2many_tags"/>
                     </group>
                     <group>
                         <field name="name" invisible="1"/>
