--- a/views/account_payment_view.xml
+++ b/views/account_payment_view.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="account.view_account_payment_form"/>
             <field name="arch" type="xml">
                 <field name="journal_id" position="after">
-                    <field name="liquidacion_id"/>
+                    <field name="descripcion"/>
                 </field>
             </field>
         </record>
