--- a/report/reporte_libro_compras_views.xml
+++ b/report/reporte_libro_compras_views.xml
@@ -36,12 +36,14 @@
                                         <th>Documento</th>
                                         <th>NIT</th>
                                         <th>Proveedor</th>
+                                        <th class="text-right">Combustible</th>
                                         <th class="text-right">Compras</th>
-                                        <th class="text-right">Compras exentos</th>
+                                        <th class="text-right">Exentos</th>
                                         <th class="text-right">Servicios</th>
                                         <th class="text-right">Servicios exentos</th>
                                         <th class="text-right">Importacion</th>
                                         <th class="text-right">Pequeño contribuyente</th>
+                                        <th class="text-right">Activos</th>
                                         <th class="text-right">IVA</th>
                                         <th class="text-right">Total</th>
                                     </tr>
@@ -52,6 +54,7 @@
                                         <td><span t-esc="linea['documento']"/></td>
                                         <td><span t-esc="linea['nit']"/></td>
                                         <td><span t-esc="linea['proveedor']"/></td>
+                                        <td class="text-right"><span t-esc="linea['combustible']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['compra']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['compra_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
 
@@ -60,6 +63,7 @@
 
                                         <td class="text-right"><span t-esc="linea['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                        <td class="text-right"><span t-esc="linea['activo']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
 
                                         <td class="text-right"><span t-esc="linea['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
                                         <td class="text-right"><span t-esc="linea['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
@@ -70,6 +74,7 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
+                                        <td class="text-right"><strong><span t-esc="t['combustible']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['compra']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['compra_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
 
@@ -78,6 +83,7 @@
 
                                         <td class="text-right"><strong><span t-esc="t['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                        <td class="text-right"><strong><span t-esc="t['activo']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
 
                                         <td class="text-right"><strong><span t-esc="t['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
                                         <td class="text-right"><strong><span t-esc="t['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
@@ -94,6 +100,80 @@
                                         <td class="text-right"><strong><span t-esc="_get_compras(data)['documentos_operados']"/></strong></td>
                                     </tr>
                                 </tbody>
+                            </table>
+
+                            <table width="100%" border="1">
+                              <t t-set="dato" t-value="_get_compras(data)['resumen_total']"/>
+                              <tr>
+                                <td><strong>Resumen</strong></td>
+                                <td align="center"><strong>Base</strong></td>
+                                <td align="center"><strong>IVA</strong></td>
+                                <td align="center"><strong>Total</strong></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total de combustibles: </strong></td>
+                                <td class="text-right"><strong><span t-esc="t['combustible']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td align="right">
+                                  <span align="right" t-esc="dato[0]['total_iva_combustible']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/>
+                                </td>
+                                <td align="right"><span align="right" t-esc="dato[0]['total_combustible']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total de compras: </strong></td>
+                                <td class="text-right"><strong><span t-esc="t['compra']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td align="right"><span align="right" t-esc="dato[1]['total_iva_compras']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[1]['total_compras']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total de servicios:</strong> </td>
+                                <td class="text-right"><strong><span t-esc="t['servicio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td align="right"><span align="right" t-esc="dato[2]['total_iva_servicio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[2]['total_servicio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Pequeños contribuyentes: </strong></td>
+                                <td class="text-right"><strong><span t-esc="t['pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td align="right"><span align="right" t-esc="dato[3]['total_iva_pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[3]['total_pequenio']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total de importaciones: </strong></td>
+                                <td class="text-right"><strong><span t-esc="t['importacion']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td align="right"><span align="right" t-esc="dato[4]['total_iva_importaciones']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[4]['total_importaciones']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Vehiculos: </strong></td>
+                                <td class="text-right"><strong><span t-esc="t['activo']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td align="right"><span align="right" t-esc="dato[5]['total_iva_vehiculos']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[5]['total_vehiculos']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total exento:</strong></td>
+                                <td class="text-right"><span t-esc="t['compra_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[6]['total_iva_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                                <td align="right"><span align="right" t-esc="dato[6]['total_exento']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total general:</strong> </td>
+                                <td class="text-right"><strong><span t-esc="t['total']-t['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td class="text-right"><strong><span t-esc="t['iva']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                                <td class="text-right"><strong><span t-esc="t['total']" t-options="{'widget': 'monetary', 'display_currency': user.company_id.currency_id}"/></strong></td>
+                              </tr>
+
+                              <tr>
+                                <td><strong>Total documentos operados: </strong></td>
+                                <td align="center"><span t-esc="_get_compras(data)['documentos_operados']"/></td>
+                              </tr>
+
                             </table>
 
                             <t t-if="len(_get_compras(data)['gastos_no']) > 0">
