--- a/views/account_journal_views.xml
+++ b/views/account_journal_views.xml
@@ -7,10 +7,20 @@
       <field name="model">account.journal</field>
       <field name="inherit_id" ref="account.view_account_journal_form"/>
       <field name="arch" type="xml">
-
         <xpath expr="//field[@name='code']" position="after">
             <field name="tipo_factura" string="Tipo factura"/>
         </xpath>
+
+        <!-- <xpath expr="//field[@name='tipo_factura']" position="after">
+
+            <table class="tabla" style="width:100%" border="1" >
+              <tr align="center">
+                <td>Vendedor</td>
+                <td>Porcentaje</td>
+              </tr>
+
+            </table>
+        </xpath> -->
 
       </field>
 
