--- a/views/report_financial.xml
+++ b/views/report_financial.xml
@@ -2,7 +2,7 @@
 <odoo>
 <data>
 
-    
+
 <template id="account_reports.main_template">
     <div class='o_account_reports_body'>
         <div id="warnings_div">
@@ -14,11 +14,11 @@
 
             <div class="o_account_reports_header">
 
-                <t t-if="report.get('name') == 'Libro mayor' "> 
+                <t t-if="report.get('name') == 'Libro mayor' ">
                     <div class="print_only">
                         <h2>
                                 <center>
-                                    <span t-esc="report.get('company_name')"/>HH1<br/>
+                                    <span t-esc="report.get('company_name')"/><br/>
                                     NIT: <span t-esc="report.get('nit_gt')"/><br/>
                                     Libro Mayor<br/>
                                     PERIODO DEL <span t-esc="report.get('date_from_gt')"/> AL <span t-esc="report.get('date_to_gt')"/> <br/>
@@ -27,14 +27,14 @@
                         </h2>
                     </div>
                 </t>
-                <t t-else="">    
+                <t t-else="">
 
                         <div class="print_only"><h2>TEST TITULO</h2></div>
                         <t t-call="account_reports.filter_info_template"/>
 
-                </t>                  
-                
-                
+                </t>
+
+
             </div>
             <div class="o_account_reports_summary"/>
             <div class="table-responsive">
@@ -50,7 +50,7 @@
             <div class="js_account_report_footnotes"/>
         </div>
     </div>
-</template>    
-    
+</template>
+
 </data>
 </odoo>
