--- a/views/report.xml
+++ b/views/report.xml
@@ -15,7 +15,8 @@
      string="Libro diario"
      report_type="qweb-pdf"
      name="account_gt.reporte_libro_diario"
-     file="account_gt.reporte_libro_diario"/>
+     file="account_gt.reporte_libro_diario"
+     paperformat="account_gt.paperformat_libro_diario"      />
 
   <report id="action_libro_ventas"
       model="account_gt.libro_ventas.wizard"
