--- a/report/reporte_libro_diario_views.xml
+++ b/report/reporte_libro_diario_views.xml
@@ -103,8 +103,8 @@
                                                   <td><span t-esc="m['codigo']"/></td>
                                                   <td><span t-esc="m['nombre_cuenta']"/></td>
                                                   <td><span t-esc="m['descripcion']"/></td>
-                                                  <td class="text-right"><span t-esc="m['debe']" t-options="{'widget': 'monetary', 'display_currency': company.currency_id}"/></td>
-                                                  <td class="text-right"><span t-esc="m['haber']" t-options="{'widget': 'monetary', 'display_currency': company.currency_id}"/></td>
+                                                  <td class="text-right">Q <span t-esc="m['debe']" t-options='{"widget": "float", "precision": 2}'/></td>
+                                                  <td class="text-right">Q <span t-esc="m['haber']" t-options='{"widget": "float", "precision": 2}'/></td>
                                               </tr>
                                           </t>
                                           <tr>
@@ -113,8 +113,8 @@
                                               <td></td>
                                               <td></td>
                                               <td><strong>Total</strong></td>
-                                              <td class="text-right"><strong><span t-esc="reporte_data[diario]['asientos'][asiento]['total_debe']" t-options="{'widget': 'monetary', 'display_currency': company.currency_id}"/></strong></td>
-                                              <td class="text-right"><strong><span t-esc="reporte_data[diario]['asientos'][asiento]['total_haber']" t-options="{'widget': 'monetary', 'display_currency': company.currency_id}"/></strong></td>
+                                              <td class="text-right"><strong>Q <span t-esc="reporte_data[diario]['asientos'][asiento]['total_debe']" t-options='{"widget": "float", "precision": 2}'/></strong></td>
+                                              <td class="text-right"><strong>Q <span t-esc="reporte_data[diario]['asientos'][asiento]['total_haber']" t-options='{"widget": "float", "precision": 2}'/></strong></td>
                                           </tr>
 
                                       </t>
@@ -125,8 +125,8 @@
                                           <td></td>
                                           <td></td>
                                           <td><strong>Total Diario</strong></td>
-                                          <td class="text-right"><strong><span t-esc="reporte_data[diario]['total_debe']" t-options="{'widget': 'monetary', 'display_currency': company.currency_id}"/></strong></td>
-                                          <td class="text-right"><strong><span t-esc="reporte_data[diario]['total_haber']" t-options="{'widget': 'monetary', 'display_currency': company.currency_id}"/></strong></td>
+                                          <td class="text-right"><strong>Q <span t-esc="reporte_data[diario]['total_debe']" t-options='{"widget": "float", "precision": 2}'/></strong></td>
+                                          <td class="text-right"><strong>Q <span t-esc="reporte_data[diario]['total_haber']" t-options='{"widget": "float", "precision": 2}'/></strong></td>
                                       </tr>
 
                                   </t>
