--- a/views/res_partner_views.xml
+++ b/views/res_partner_views.xml
@@ -8,6 +8,7 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
                 <field name="vat" position="after">
+                    <field name="documento_personal_identificacion"/>
                     <field name="pequenio_contribuyente"/>
                 </field>
 
