--- a/views/account_move_views.xml
+++ b/views/account_move_views.xml
@@ -13,6 +13,17 @@
                 </field>
             </field>
         </record>
-
+        
+    <record id="infilefel_view_company_form" model="ir.ui.view">
+      <field name="name">infilefel.res.company.form</field>
+      <field name="model">res.company</field>
+      <field name="inherit_id" ref="base.view_company_form"/>
+      <field name="arch" type="xml">
+        <field name="vat" position="after">
+            <field name="anulado_libro_compras"/>
+        </field>    
+      </field>
+    </record>  
+        
     </data>
 </odoo>
