--- a/views/product_template_views.xml
+++ b/views/product_template_views.xml
@@ -8,6 +8,7 @@
       <field name="arch" type="xml">
         <xpath expr="//field[@name='detailed_type']" position="after">
             <field name="es_activo" string="Es un activo?"/>
+            <field name="farmacia_exento"/>
         </xpath>
       </field>
   </record>
@@ -20,6 +21,7 @@
       <field name="arch" type="xml">
         <xpath expr="//field[@name='detailed_type']" position="after">
             <field name="es_activo" string="Es un activo?"/>
+            <field name="farmacia_exento"/>
         </xpath>
       </field>
   </record>
