Vista exportador account_move_views.xml

--- a/views/account_move_views.xml
+++ b/views/account_move_views.xml
@@ -11,6 +11,24 @@
                     <field name="liquidacion_id"/>
                     <field name="tipo_factura"/>
                 </field>
+                <page name="other_info" position="after">
+                    <page name="datos_fexp" string="Datos Factura exportación">
+                        <group>
+                            <field name="nombre_consignatario_destinatario"/>
+                            <field name="direccion_consignatario_destinatario"/>
+                            <field name="codigo_consignatario_destinatario"/>
+                            <field name="nombre_comprador"/>
+                            <field name="direccion_comprador"/>
+                        </group>   
+                        <group>
+                            <field name="codigo_comprador"/>
+                            <field name="otra_referencia"/>
+                            <field name="incoterm_exp"/>
+                            <field name="nombre_exportador"/>
+                            <field name="codigo_exportador"/>
+                        </group>  
+                    </page>    
+                </page>
             </field>
         </record>
         
