--- a/views/account_gt_views.xml
+++ b/views/account_gt_views.xml
@@ -3,6 +3,20 @@
     <data>
 
 
+      <record id="view_account_journal_extra_form" model="ir.ui.view">
+
+          <field name="name">view.account.journal.extra.form</field>
+          <field name="model">account.journal</field>
+          <field name="inherit_id" ref="account.view_account_journal_form"/>
+          <field name="arch" type="xml">
+            <xpath expr="//field[@name='code']" position="after">
+                <field name="tipo_factura" string="Tipo factura"/>
+            </xpath>
+
+          </field>
+
+      </record>
+
         <record id="view_account_gt_liquidacion_tree" model="ir.ui.view">
             <field name="name">account_gt.liquidacion.tree</field>
             <field name="model">account_gt.liquidacion</field>
